# rad_matrix

./: README.md
scenes/: rad_tabletop.ttt  scene.config
scripts/: move.sh  remove_unneeded_libs.sh  start_vrep_instances.sh  unmove.sh
sim_architect/: CMakeLists.txt  package.xml
sim_architect/msg/: Euler.msg
sim_architect/src/: sim_architect_node.cpp
sim_architect/srv/: EvalForceTorque.srv  GetObjectPose.srv
sim_oracle/: CMakeLists.txt  package.xml
sim_oracle/src/: sim_oracle_node.cpp
sim_oracle/srv/: SampleForceTorque.srv
vrep_plugin/: CMakeLists.txt
vrep_plugin/include/vrep_plugin/: ROS_server.h
vrep_plugin/src/: ROS_server.cpp  vrepSubscriber.cpp  vrep_plugin.cpp
vrep_plugin_server/: CMakeLists.txt  mainpage.dox  move.sh  package.xml  unmove.sh
vrep_plugin_server/include/: v_repConst.h
vrep_plugin_server/include/vrep_plugin_server/: ros_server.h  vrep_plugin_loop.h
vrep_plugin_server/src/: ros_server.cpp  vrep_plugin_loop.cpp
vrep_plugin_server/srv/: ActionA.srv  AddForce.srv  AddForceTorque.srv  AddShape.srv  AreCubesSplit.srv  IsSceneStatic.srv  PushObject.srv  ResetScene.srv  SetShapeColour.srv
world2sim/: CMakeLists.txt  package.xml
world2sim/src/: cube_interface.cpp
