<?xml version="1.0"?>
<package>
  <name>sim_architect</name>
  <version>1.0.0</version>
  <description>The sim_architect package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="d.angelov@sms.inf.ed.ac.uk">Daniel Angelov</maintainer>
  <author>Daniel Angelov</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vrep_common</build_depend>
  <build_depend>vrep_plugin_server</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>vrep_common</run_depend>
  <run_depend>vrep_plugin_server</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
